--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -13,6 +13,7 @@
 @import './posts.scss';
 @import './comments.scss';
 @import './createpost.scss';
+@import './contactus.scss';
 @import './postlikesmodal';
 @import './uploadphotomodal';
 
