--- a/server/scss/content.scss
+++ b/server/scss/content.scss
@@ -23,19 +23,17 @@
       width: auto;
       cursor: pointer;
       border-radius: 3px;
-      border-color: #3f4257;
       font-weight: 600;
       min-height: 36px;
       outline: 0;
       padding: .75em 7em;
       vertical-align: middle;
-      border: 1px solid rgba(0,0,0,.12);
+      border: 1px solid #ff5e3a;
+      background-color: #ff5e3a;
       color: #fff;
-      background: #5c5f72;
 
       &:hover{
-        background: #3f4257;
-        transition: all .4s cubic-bezier(.165,.84,.44,1);
+        opacity: 0.8;
       }
     }
   }
