--- a/server/views/signup.ejs
+++ b/server/views/signup.ejs
@@ -54,8 +54,8 @@
                 </form>
             </div>
             <div class="content-social">
-                <a href="/auth/facebook" class="">
-                    <span class="">Log in with</span> Facebook
+                <a href="/auth/facebook" class="facebook-button">
+                    <span class="">Sign In with</span> Facebook
                 </a>
             </div>
         </div>
