--- a/server/scss/forgot.scss
+++ b/server/scss/forgot.scss
@@ -43,25 +43,34 @@ article.forgot-password{
         }
         input[type="text"], input[type="password"], input[type="email"]{
           width: 100%;
+          background: #fff;
+          line-height: 1.45;
+          padding: 4px;
+          border: 1px solid #ccc;
+        }
+        input, textarea{
+          &:focus{
+            border-color: #1f24cc;
+            box-shadow: none;
+            outline: 0;
+          }
         }
         button[type="submit"]{
           font-size: 16px;
           width: auto;
           cursor: pointer;
           border-radius: 3px;
-          border-color: #3f4257;
           font-weight: 600;
           min-height: 36px;
           outline: 0;
           padding: 0 16px;
           vertical-align: middle;
-          border: 1px solid rgba(0,0,0,.12);
+          border: 1px solid #ff5e3a;
+          background-color: #ff5e3a;
           color: #fff;
-          background: #5c5f72;
 
           &:hover{
-            background: #3f4257;
-            transition: all .4s cubic-bezier(.165,.84,.44,1);
+            opacity: 0.8;
           }
         }
       }
