--- a/server/views/login.ejs
+++ b/server/views/login.ejs
@@ -44,7 +44,7 @@
                             <input type="checkbox" /><label>Keep me signed in</label>
                         </div>
                         <div class="form-group">
-                            <button type="submit" class="em-form-control">Login</button>
+                            <button type="submit" class="em-form-control">Log In</button>
                         </div>
                         <!-- show any messages that come back with authentication -->
                         <% if (error.length > 0) { %>
@@ -53,7 +53,7 @@
                     </form>
                 </div>
                 <div class="content-social">
-                    <a href="/auth/facebook" class="">
+                    <a href="/auth/facebook" class="facebook-button">
                         <span class="btn-fb-login">Log in with Facebook</span>
                     </a>
                 </div>
