Image Upload in Profile, fontawesome icons

--- a/client/src/styles/header.scss
+++ b/client/src/styles/header.scss
@@ -29,6 +29,13 @@
         &:hover{
           color: #ececec;
         }
+        .app-name{
+          padding: 0 10px;
+        }
+        i{
+          font-size: 1.5rem;
+          vertical-align: middle;
+        }
       }
     }
   }
@@ -112,6 +119,13 @@
               &:focus{
                 outline: none;
               }
+            }
+            .item-text{
+              padding: 0 10px;
+            }
+            i{
+              zoom: 1.2;
+              vertical-align: middle;
             }
           }
         }
