--- a/client/src/styles/posts.scss
+++ b/client/src/styles/posts.scss
@@ -72,6 +72,13 @@
                   &:active{
                     background-color: #ececec;
                   }
+                  .item-text{
+                    padding: 0 10px;
+                  }
+                  i{
+                    zoom: 1.2;
+                    vertical-align: middle;
+                  }
                 }
               }
             }
