--- a/server/views/partial/header.ejs
+++ b/server/views/partial/header.ejs
@@ -2,7 +2,8 @@
     <div class="left-content">
         <a href="/posts">
             <div class="app-logo">
-                EXPRESS MATCH
+                <i class="fas fa-link"></i>
+                <span className="app-name">EXPRESS MATCH</span>
             </div>
         </a>
     </div>
