--- a/client/src/styles/profile.scss
+++ b/client/src/styles/profile.scss
@@ -13,14 +13,11 @@
     padding: 10px 20px;
 
     .display-pic{
-      border: 1px solid #ececec;
-      height: 200px;
       position: relative;
 
       picture img {
-        height: 100%;
         width: 100%;
-        padding: 5px;
+        max-height: 200px;
       }
       .change-pic{
         position: absolute;
@@ -81,7 +78,7 @@
             }
           }
           textarea {
-            height: 160px;
+            height: 140px;
             resize: none;
           }
           select.react-datepicker__month-select, select.react-datepicker__year-select{
