--- a/client/src/styles/uploadphotomodal.scss
+++ b/client/src/styles/uploadphotomodal.scss
@@ -6,13 +6,11 @@
 
     .display-pic{
       border: 1px solid #ececec;
-      height: 200px;
       position: relative;
 
       picture img {
-        height: 100%;
         width: 100%;
-        padding: 5px;
+        max-height: 200px;
       }
     }
   }
