Fix for Post action menu issue

--- a/client/src/styles/posts.scss
+++ b/client/src/styles/posts.scss
@@ -53,6 +53,8 @@
                 -moz-box-shadow: 2px 2px 5px 2px #ececec;
                 -webkit-box-shadow: 2px 2px 5px 2px #ececec;
                 box-shadow: 2px 2px 5px 2px #ececec;
+                outline: none;
+
                 .menu-item {
                   font-size: 11px;
                   white-space: nowrap;
