--- a/server/views/forgot.ejs
+++ b/server/views/forgot.ejs
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Express Match - Express and find your partner</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link href="/public/css/main.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
