--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -7,3 +7,25 @@ $em-border-gray: #ccc;
 //Background Color
 $em-bg-gray: #f9f9f9;
 $em-bg-white: #fff;
+
+//Page
+$em-color: #888da8;
+$em-bg-color: #edf2f6;
+
+//Inputs
+$em-input-color: #888da8;
+
+//Button - Action
+$em-btn-text: #888da8;
+
+//Button - Alt
+$em-alt-btn-text: #fff;
+$em-alt-btn-bg: #888da8;
+$em-alt-btn-text-active: #888da8;
+$em-alt-btn-bg-active: none;
+
+//Button - Forms
+$em-primary-btn-bg-color: #888da8;
+$em-primary-btn-border-color: #888da8;
+$em-primary-btn-bg-color-hover: #8885a8;
+$em-primary-btn-border-color-hover: #8885a8;
