--- a/client/src/styles/contactus.scss
+++ b/client/src/styles/contactus.scss
@@ -28,7 +28,7 @@
           width: 250px;
           outline: none;
           border: 1px solid #e6ecf5;
-          color: #888da8;
+          color: $em-input-color;
 
           &:disabled{
             cursor: default;
@@ -59,7 +59,7 @@
         input[type="reset"], input[type="submit"], input[type="button"]{
           border-radius: 10px;
           margin-right: 5px;
-          color: #888da8;
+          color: $em-input-color;
           outline: none;
           width: 100px;
           background: none;
