--- a/client/src/styles/posts.scss
+++ b/client/src/styles/posts.scss
@@ -154,7 +154,7 @@
 
             button{
               background: none;
-              color: #888da8;
+              color: $em-btn-text;
               height: 30px;
               width: 100%;
               border-radius: 2px;
@@ -208,8 +208,8 @@
       button.clear-quick-filter{
         align-self: flex-end;
         margin-bottom: 10px;
-        background-color: #888da8;
-        color: #fff;
+        background-color: $em-alt-btn-bg;
+        color: $em-alt-btn-text;
         -moz-outline: none;
         -webkit-outline: none;
         outline: none;
@@ -219,8 +219,8 @@
         border: 1px solid #e6ecf5;
 
         &:active{
-          background: none;
-          color: #888da8;
+          background: $em-alt-btn-bg-active;
+          color: $em-alt-btn-text-active;
         }
       }
 
