--- a/server/scss/main.scss
+++ b/server/scss/main.scss
@@ -18,7 +18,7 @@ body{
   font-family: sans-serif;
   font-size: 13px;
   color: #888da8;
-  background-color: #edf2f6;
+  background-color: $em-bg-color;
   //overflow: hidden;
   height:100%;
 }
