--- a/server/public/css/main.css
+++ b/server/public/css/main.css
@@ -1,4 +1,5 @@
 #header {
+  min-height: 60px;
   height: 60px;
   min-height: 60px;
   display: flex;
@@ -86,7 +87,7 @@
               vertical-align: middle; }
 
 #content {
-  margin: auto;
+  margin: 0 auto;
   width: 80%;
   min-width: 820px;
   padding: 10px;
@@ -143,7 +144,8 @@ footer {
 
 article.login {
   display: flex;
-  justify-content: center; }
+  justify-content: center;
+  flex: 1 0 auto; }
   article.login .login-container {
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -154,8 +156,7 @@ article.login {
     flex-flow: column;
     font-weight: bold;
     font-size: 12px;
-    background-color: #fff;
-    min-height: 440px; }
+    background-color: #fff; }
     article.login .login-container .header {
       padding: 20px;
       border-bottom: 1px solid #ccc; }
@@ -250,7 +251,8 @@ article.login {
 
 article.sign-up {
   display: flex;
-  justify-content: center; }
+  justify-content: center;
+  flex: 1 0 auto; }
   article.sign-up .sign-up-container {
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -261,8 +263,7 @@ article.sign-up {
     flex-flow: column;
     font-weight: bold;
     font-size: 12px;
-    background-color: #fff;
-    min-height: 440px; }
+    background-color: #fff; }
     article.sign-up .sign-up-container .header {
       padding: 20px;
       border-bottom: 1px solid #ccc; }
