Added fontawesome on server and adjusted landing page layouts

--- a/server/scss/login.scss
+++ b/server/scss/login.scss
@@ -3,11 +3,10 @@ article.login{
   justify-content: center;
   flex: 1 0 auto;
 
-
   .login-container{
     border: 1px solid #ccc;
     border-radius: 5px;
-    margin: 80px;
+    margin: auto;
     min-width: 380px;
     width: 380px;
     display: flex;
