--- a/server/scss/content.scss
+++ b/server/scss/content.scss
@@ -1,6 +1,6 @@
 #content{
-  //flex: 1 1 auto;
-  margin: 0 auto;
+  //flex: 1 0 auto;
+  margin: auto;
   width: 80%;
   min-width: 820px;
   padding: 10px;
