--- a/server/scss/signup.scss
+++ b/server/scss/signup.scss
@@ -7,7 +7,7 @@ article.sign-up{
   .sign-up-container{
     border: 1px solid #ccc;
     border-radius: 5px;
-    margin: 80px;
+    margin: auto;
     min-width: 380px;
     width: 380px;
     display: flex;
