--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -3,7 +3,7 @@
 <html>
 <head>
     <title>Express Match</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link href="/public/css/main.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
