--- a/server/views/reset.ejs
+++ b/server/views/reset.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Express Match - Express and find your partner</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link href="/public/css/main.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
