--- a/server/views/signup.ejs
+++ b/server/views/signup.ejs
@@ -3,6 +3,7 @@
 <head>
     <title>Express Match - Express and find your partner</title>
     <link href="/public/css/main.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 <body>
 <div class="container">
