--- a/server/views/signup.ejs
+++ b/server/views/signup.ejs
@@ -11,7 +11,7 @@
     <article class="sign-up">
         <div class="sign-up-container">
             <div class="header">
-                <div class="main-title">Sign Up</div>
+                <div class="main-title">Sign Up <i class="fas fa-lock"></i> </div>
                 <div class="sub-title">
                     <span class="login-text">Already a member? </span>
                     <span class="login-link">
@@ -45,6 +45,9 @@
                             <input type="password" name="password" required/>
                         </div>
                     </div>
+                    <!--<div class="form-group">-->
+                        <!--When you "Submit", you agree to Express To Match's Terms of Service. We will manage information about you as described in our Privacy Policy, and Cookie Policy.-->
+                    <!--</div>-->
                     <div class="form-group">
                         <button type="submit" class="em-form-control">Submit</button>
                     </div>
