--- a/server/scss/login.scss
+++ b/server/scss/login.scss
@@ -59,6 +59,11 @@ article.login{
           padding: 4px;
           border: 1px solid #ccc;
         }
+        input[type="checkbox"]{
+          height: 20px;
+          width: 20px;
+          vertical-align: middle;
+        }
         input, textarea{
           &:focus{
             border-color: #1f24cc;
