--- a/client/src/styles/comments.scss
+++ b/client/src/styles/comments.scss
@@ -72,6 +72,7 @@
             .content{
               display: flex;
               justify-content: space-between;
+              word-break: break-word;
               .text{ }
               .del-icon{
                 cursor: pointer;
@@ -196,6 +197,7 @@
               .content{
                 display: flex;
                 justify-content: space-between;
+                word-break: break-word;
                 .text{  }
                 .del-icon{
                   cursor: pointer;
